src/snapshots/prql__translator__test__prql_to_sql-2.snap
---
source: src/translator.rs
assertion_line: 789
expression: sql
---
SELECT
  TOP (20) SUM(salary + payroll_tax + benefits_cost) AS sum_gross_cost,
  COUNT(*) AS count,
  AVG(salary),
  SUM(salary),
  AVG(salary + payroll_tax),
  SUM(salary + payroll_tax),
  AVG(salary + payroll_tax + benefits_cost)
FROM
  employees
WHERE
  country = 'USA'
  and salary + payroll_tax + benefits_cost > 0
GROUP BY
  title,
  country
HAVING
  COUNT(*) > 200
ORDER BY
  SUM(salary + payroll_tax + benefits_cost)
