src/snapshots/prql__translator__test__prql_to_sql_2.snap
---
source: src/translator.rs
expression: sql
---
SELECT
  TOP (20) title,
  country,
  SUM(salary + payroll_tax + benefits_cost) AS sum_gross_cost,
  COUNT(*) AS ct,
  AVG(salary),
  SUM(salary),
  AVG(salary + payroll_tax),
  SUM(salary + payroll_tax),
  AVG(salary + payroll_tax + benefits_cost)
FROM
  employees
WHERE
  country = 'USA'
  and salary + payroll_tax + benefits_cost > 0
GROUP BY
  title,
  country
HAVING
  ct > 200
ORDER BY
  sum_gross_cost
